# Starcode-AI-system

./: CONTRIBUTING.md  Code of Conduct.md  MODEL_LICENSE.txt  README.md  SECURITY.md
AI-System/: .dockerignore  .env.example  .gitignore  .sha  CHANGELOG.md  Caddyfile  Dockerfile  LICENSE  README.md  TEST-REPORT.md  docker-compose.yml  init-docker.ps1  init-docker.sh  install-linux.sh  install-windows.ps1  pyproject.toml  requirements.txt  start-linux.sh  start-windows.ps1
AI-System/app/: __init__.py  config.py  db.py  dependencies.py  main.py  models.py  schemas.py  security.py
AI-System/app/routers/: admin.py  auth.py  chat.py  feedback.py  files.py  knowledge.py  projects.py  research.py
AI-System/app/services/: __init__.py  backups.py  code_review.py  files.py  ollama.py  projects.py  research.py  safety.py  system.py
AI-System/app/static/: app.css  app.js  imprint.html  index.html  privacy.html  terms.html
AI-System/app/static/i18n/: de.json  en.json
AI-System/docs/: ARCHITECTURE.md  OPERATIONS.md  PRIVACY.md  SECURITY.md  TERMS.md  TROUBLESHOOTING.md
AI-System/scripts/: __init__.py  create_admin.py  set_maintenance.py
AI-System/searxng/: settings.yml
AI-System/tests/: conftest.py  test_auth.py  test_conversations.py  test_files.py  test_projects.py  test_research.py  test_safety.py
docs/: CNAME  index.html
