[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "localai-control"
version = "1.0.0"
description = "Self-hosted local AI workspace for text, research, files, and code"
requires-python = ">=3.12"
license = {text = "AGPL-3.0-or-later"}

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 110

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
